Add custom startup banner and configure banner path
ASCII art SynergyBridge + IBM CERTIFIED banner with
enterprise certifications and Remedy ticket reference.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,7 @@ quarkus.log.console.color=false
 
 # Banner Configuration
 quarkus.banner.enabled=true
+quarkus.banner.path=banner.txt
 
 # Dev Mode Configuration (enables hot reload and dev tools)
 %dev.quarkus.live-reload.instrumentation=true
