Update Quarkus to 3.31.2 and MCP server to 1.9.0 with HTTP transport
- Upgrade Quarkus platform from 3.20.0 to 3.31.2
- Upgrade MCP server extension from 1.0.0.CR1 to 1.9.0
- Switch from quarkus-mcp-server-sse to quarkus-mcp-server-http
- Enable CORS (required by Streamable HTTP MCP transport)
- Remove deprecated quarkus.log.console.enable and quarkus.log.console.color
- Comment out TLS config (certs directory does not exist)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,22 @@
 # "Bridging the gap between your legacy investments and tomorrow's legacy investments"
 
 # MCP Transport Configuration
-# The server exposes three transports:
-# - STDIO: For CLI/desktop client integration (via quarkus-mcp-server-stdio)
-# - Streamable HTTP: Available at /mcp (via quarkus-mcp-server-sse)
-# - HTTP/SSE: Available at /mcp/sse (via quarkus-mcp-server-sse)
+# The server exposes two HTTP transports (via quarkus-mcp-server-http):
+# - Streamable HTTP: Available at /mcp
+# - HTTP/SSE (legacy): Available at /mcp/sse
 
 # HTTP server port (default 8080)
 quarkus.http.port=8080
 
-# HTTPS Configuration
-# SSL/TLS is enabled with a self-signed certificate for enterprise-grade security
-quarkus.http.ssl-port=8443
-quarkus.tls.key-store.p12.path=certs/server-keystore.p12
-quarkus.tls.key-store.p12.password=password
+# CORS - required for Streamable HTTP MCP transport
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=*
 
-# Insecure requests handling:
-# - enabled: Allow both HTTP and HTTPS (default for development)
-# - redirect: Redirect HTTP to HTTPS
-# - disabled: Only allow HTTPS (reject HTTP)
-quarkus.http.insecure-requests=enabled
+# HTTPS Configuration (uncomment and create certs/ directory to enable)
+# quarkus.http.ssl-port=8443
+# quarkus.tls.key-store.p12.path=certs/server-keystore.p12
+# quarkus.tls.key-store.p12.password=password
+# quarkus.http.insecure-requests=enabled
 
 # Canned Responses Path
 canned.responses.path=canned-responses
@@ -29,11 +26,9 @@ canned.responses.path=canned-responses
 quarkus.log.level=INFO
 quarkus.log.category."com.synergybridge".level=INFO
 
-# Console logging - explicitly enabled for container environments
-quarkus.log.console.enable=true
+# Console logging
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
 quarkus.log.console.level=ALL
-quarkus.log.console.color=false
 
 # Banner Configuration
 quarkus.banner.enabled=true
