Add tests, Dependabot, CI badge, native build, MCP resources/prompts, Testcontainers
- Fix docker-compose.yml: remove port 8443, fix healthcheck to use /
- Add HealthInfoEndpointTest with RestAssured
- Add Dependabot config for gradle and github-actions
- Add CI badge to README
- Add GraalVM native build job to CI (continue-on-error)
- Add TODO for GHCR container publishing
- Add MCP resource (architecture-diagram) and prompt (consulting-report)
- Add Testcontainers integration test with containerTest task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,13 @@ services:
     ports:
       # HTTP endpoint for MCP communication
       - "8080:8080"
-      # HTTPS endpoint for enterprise-grade secure connections
-      - "8443:8443"
     environment:
       # Java options for enterprise performance tuning
       - JAVA_OPTS=-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Xms256m -Xmx512m
       # Disable banner in production (optional - enable for nostalgia)
       # - QUARKUS_BANNER_ENABLED=false
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/q/health/ready"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
       interval: 30s
       timeout: 10s
       retries: 3
