--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,6 @@ quarkus.banner.path=banner.txt
 %dev.quarkus.live-reload.instrumentation=true
 %dev.quarkus.log.level=INFO
 %dev.quarkus.log.category."com.synergybridge".level=DEBUG
+
+# Native build — opt-in only (use -Dquarkus.native.enabled=true to activate)
+%prod.quarkus.native.enabled=false
