--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,3 +71,26 @@ jobs:
         run: |
           docker logs synergybridge || true
           docker rm -f synergybridge || true
+
+    # TODO: Add container image publishing to ghcr.io on push to main
+    # See: https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry
+
+  native-build:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up GraalVM 21
+        uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build native image
+        run: ./gradlew build -Dquarkus.native.enabled=true -Dquarkus.native.container-build=true
