--- a/Dockerfile.native
+++ b/Dockerfile.native
@@ -53,8 +53,8 @@ LABEL org.opencontainers.image.vendor="SynergyBridge Enterprise Solutions Divisi
 LABEL com.synergybridge.certifications="ISO 9001, CMMI Level 3, Y2K Compliant"
 LABEL com.synergybridge.build="native"
 
-# Install minimal required packages (curl for healthcheck)
-RUN microdnf install -y libstdc++ zlib curl-minimal && \
+# Install minimal required packages
+RUN microdnf install -y libstdc++ zlib && \
     microdnf clean all
 
 WORKDIR /app
@@ -71,9 +71,8 @@ USER 1001
 # Expose HTTP port
 EXPOSE 8080
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8080/ || exit 1
+# Health check - Koyeb uses its own HTTP health checks on the / endpoint
+# No curl needed in the container
 
 # Environment variables
 ENV QUARKUS_HTTP_HOST=0.0.0.0
